apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::schema

  × schema validation error
  ╰─▶ schema validation error

Error: apollo::configuration::validation

  × Additional properties are not allowed ('non_existant' was unexpected)
   ╭─[3:3]
 2 │ plugins:
 3 │   non_existant:
   ·   ──────┬─────
   ·         ╰── Additional properties are not allowed ('non_existant' was unexpected)
 4 │     foo: "bar"
   ╰────

Error: apollo::configuration::validation

  × Additional properties are not allowed ('another_non_existant' was
  │ unexpected)
   ╭─[7:3]
 6 │ telemetry:
 7 │   another_non_existant: 3
   ·   ──────────┬─────────
   ·             ╰── Additional properties are not allowed ('another_non_existant' was unexpected)
 8 │   
   ╰────
