apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_bad_type.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::schema

  × schema validation error
  ╰─▶ schema validation error

Error: apollo::configuration::validation

  × true is not valid under any of the schemas listed in the 'anyOf' keyword
   ╭─[5:11]
 4 │   # Defaults to 127.0.0.1:4000
 5 │   listen: true
   ·           ──┬─
   ·             ╰── true is not valid under any of the schemas listed in the 'anyOf' keyword
 6 │         
   ╰────
