apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_with_errors_after_first_field.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::schema

  × schema validation error
  ╰─▶ schema validation error

Error: apollo::configuration::validation

  × Additional properties are not allowed ('bad', 'another_one' were
  │ unexpected)
   ╭─[6:3]
 5 │   listen: 127.0.0.1:4000
 6 │   bad: "donotwork"
   ·   ─┬─
   ·    ╰── Additional properties are not allowed ('bad', 'another_one' were unexpected)
 7 │   another_one: true
   ╰────
