apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_with_errors_after_first_field_env_expansion.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::schema

  × schema validation error
  ╰─▶ schema validation error

Error: apollo::configuration::validation

  × Additional properties are not allowed
  │ ('${TEST_CONFIG_NUMERIC_ENV_UNIQUE:-true}', 'another_one' were unexpected)
   ╭─[6:3]
 5 │   listen: 127.0.0.1:4000
 6 │   ${TEST_CONFIG_NUMERIC_ENV_UNIQUE:-true}: 5
   ·   ───────────────────┬───────────────────
   ·                      ╰── Additional properties are not allowed ('${TEST_CONFIG_NUMERIC_ENV_UNIQUE:-true}', 'another_one' were unexpected)
 7 │   another_one: foo
   ╰────
