apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_with_inline_sequence.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::schema

  × schema validation error
  ╰─▶ schema validation error

Error: apollo::configuration::validation

  × 5 is not of type "string"
   ╭─[7:34]
 6 │ cors:
 7 │   allow_headers: [ Content-Type, 5 ]
   ·                                  ┬
   ·                                  ╰── 5 is not of type "string"
 8 │         
   ╰────
