apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_with_inline_sequence_env_expansion.snap
---
source: apollo-router/src/configuration/mod.rs
expression: error.to_string()
---
configuration had errors: 
1. /server/cors/allow_headers/1

  # Defaults to 127.0.0.1:4000
  data: 127.0.0.1:4000
server:
  cors:
    allow_headers: [ Content-Type, "${TEST_CONFIG_NUMERIC_ENV_UNIQUE}" ]
                                   ^----- "${TEST_CONFIG_NUMERIC_ENV_UNIQUE}" is not of type "string"
