apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__line_precise_config_errors_with_sequence_env_expansion.snap
---
source: apollo-router/src/configuration/mod.rs
expression: error.to_string()
---
configuration had errors: 
1. /server/cors/allow_headers/1

server:
  cors:
    allow_headers:
      - Content-Type
      - "${TEST_CONFIG_NUMERIC_ENV_UNIQUE:true}"
        ^----- "${TEST_CONFIG_NUMERIC_ENV_UNIQUE:true}" is not of type "string"
