apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__subgraph_override.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 980
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2019-09/schema",
  "title": "TestSubgraphOverride",
  "type": "object",
  "properties": {
    "value": {
      "type": [
        "integer",
        "null"
      ],
      "format": "uint8",
      "minimum": 0,
      "maximum": 255
    },
    "subgraph": {
      "description": "Configuration options pertaining to the subgraph server component.",
      "type": "object",
      "properties": {
        "all": {
          "description": "options applying to all subgraphs",
          "type": "object",
          "properties": {
            "a": {
              "type": "boolean",
              "default": true
            },
            "b": {
              "type": "integer",
              "format": "uint8",
              "minimum": 0,
              "maximum": 255,
              "default": 0
            }
          }
        },
        "subgraphs": {
          "description": "per subgraph options",
          "type": "object",
          "additionalProperties": {
            "type": "object",
            "properties": {
              "a": {
                "type": "boolean",
                "default": true
              },
              "b": {
                "type": "integer",
                "format": "uint8",
                "minimum": 0,
                "maximum": 255,
                "default": 0
              }
            }
          }
        }
      }
    }
  },
  "required": [
    "subgraph"
  ]
}
