apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__supergraph_config_serde.snap
---
source: apollo-router/src/configuration/mod.rs
assertion_line: 376
expression: config

---
server:
  listen: "127.0.0.1:4001"
  cors:
    allow_any_origin: ~
    allow_credentials: ~
    allow_headers:
      - Content-Type
    expose_headers: ~
    origins:
      - studio.apollographql.com
    methods:
      - GET
      - PUT
subgraphs:
  accounts:
    routing_url: "http://localhost:4001/graphql"
  inventory:
    routing_url: "http://localhost:4004/graphql"
  products:
    routing_url: "http://localhost:4003/graphql"
  reviews:
    routing_url: "http://localhost:4002/graphql"
opentelemetry: ~
extensions: {}

